--- a/stylesheet.css
+++ b/stylesheet.css
@@ -336,3 +336,27 @@
 .FarmingStatsLevel{
 
 }
+
+.WanderingStatsDiv{
+
+}
+
+.WanderingStatsTitle{
+  font-size: 150%;
+}
+
+.TimesWanderedStat{
+
+}
+
+.MiscStatsDiv{
+
+}
+
+.MiscStatsTitle{
+  font-size: 150%;
+}
+
+.PlayTimeStat{
+  
+}
