--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,10 +1,11 @@
 .Html{
-  height: 98%;
+  height: 100%;
+  width: 100%;
   font-size: 85%;
 }
 
 .Body{
-  overflow: hidden;
+  overflow: visible;
   background: rgb(0, 0, 0);
   height: 100%;
   width: 99%;
@@ -257,7 +258,7 @@
 }
 
 .InfoBoxBox{
-  height: 95%;
+  height: 93%;
   overflow: hidden;
 }
 
@@ -270,7 +271,7 @@
   height: 5%;
   width: 32%;
   position: absolute;
-  top: 33%;
+  top: 35%;
 }
 
 .WanderButton:active{
@@ -287,7 +288,7 @@
 
 .WanderCooldown{
   position: absolute;
-  top: 30%;
+  top: 32%;
   width: 31%;
 }
 
@@ -298,6 +299,7 @@
   background: none;
   outline: none;
   border: none;
+  display: none;
 }
 
 .FarmingLink:hover{
@@ -358,5 +360,226 @@
 }
 
 .PlayTimeStat{
-  
+
+}
+
+.StatsStatsDiv{
+
+}
+
+.StatsStatsTitle{
+  font-size: 150%;
+}
+
+.MaxHealthStat{
+
+}
+
+.StrengthStat{
+
+}
+
+.AgilityStat{
+
+}
+
+.IntelligenceStat{
+
+}
+
+.DefenceStat{
+
+}
+
+.HealthBar{
+  position: absolute;
+  top: 58%;
+  width: 31%;
+  visibility: hidden
+}
+
+.CurrentHealthDiv{
+  position: absolute;
+  top: 55%;
+  visibility: hidden;
+}
+
+.CurrentHealth{
+
+}
+
+.WeaponDisplay{
+  align-self: center;
+  text-align: center;
+  position: absolute;
+  top: 61%;
+  visibility: hidden;
+}
+
+.CurrentWeapon{
+
+}
+
+.ArmorDisplay{
+  align-self: center;
+  text-align: center;
+  position: absolute;
+  top: 64.5%;
+  visibility: hidden;
+}
+
+.CurrentArmor{
+
+}
+
+.AttackDisplay{
+  text-align: center;
+  align-self: center;
+  position: absolute;
+  top: 69%;
+  visibility: hidden;
+}
+
+.AttackDamageDiv{
+
+}
+
+.AttackDamage{
+
+}
+
+.AttackSpeedDiv{
+
+}
+
+.AttackSpeed{
+
+}
+
+.DamageReductionDisplay{
+  text-align: center;
+  align-self: center;
+  position: absolute;
+  top: 76.5%;
+  visibility: hidden;
+}
+
+.DamageReduction{
+
+}
+
+.DodgeChanceDisplay{
+  text-align: center;
+  align-self: center;
+  position: absolute;
+  top: 79.5%;
+  visibility: hidden;
+}
+
+.DodgeChance{
+
+}
+
+.EnemyDisplay{
+  text-align: center;
+  align-self: center;
+  position: absolute;
+  top: 1%;
+  width: 100%;
+  visibility: hidden;
+}
+
+.EnemyNameDiv{
+
+}
+
+.EnemyName{
+
+}
+
+.EnemyHealthDiv{
+
+}
+
+.EnemyHealth{
+
+}
+
+.EnemyHealthBar{
+  width: 31%;
+}
+
+.EnemyAttackDiv{
+
+}
+
+.EnemyAttack{
+
+}
+
+.EnemyAttackSpeedDiv{
+
+}
+
+.EnemyAttackSpeed{
+
+}
+
+.EnemyDamageReductionDiv{
+
+}
+
+.EnemyDamageReduction{
+
+}
+
+.EnemyDodgeChance{
+
+}
+
+.EnemyDodgeChanceDiv{
+
+}
+
+.WanderControlButtonsDiv{
+  visibility: hidden;
+  width: 100%;
+  height: 100%;
+}
+
+.WanderYesButton{
+  background: none;
+  outline: none;
+  border: solid 1px rgb(255, 255, 255);
+  color: rgb(255, 255, 255);
+  width: 15%;
+  height: 7%;
+  position: absolute;
+  top: 43%;
+  right: 30%;
+}
+
+.WanderYesButton:active{
+  background: rgb(25, 25, 25);
+}
+
+.WanderNoButton{
+  background: none;
+  outline: none;
+  border: solid 1px rgb(255, 255, 255);
+  color: rgb(255, 255, 255);
+  width: 15%;
+  height: 7%;
+  position: absolute;
+  top: 43%;
+  left: 30%;
+}
+
+.WanderNoButton:active{
+  background: rgb(25, 25, 25);
+}
+
+.PageBottom{
+  text-align: center;
+  font-size: 80%;
 }
